Display only calendar + change event

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <canvas id="canvas"></canvas>
 
-<p>Date: <input type="text" id="datepicker"><input type="submit" value="Select" id="selectDate"></p>
+<div id="datepicker" ></div>
 
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script type="text/javascript" src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
