Ajout champ paramètre IP

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <header>
     <h1>Visualisation des statistiques de Fiyeli</h1>
 </header>
+<div class="top">
+    <p><label for="fiyeliIP">Adresse de votre Fiyeli : </label><input type="text" id="fiyeliIP" placeholder="http://localhost:5000'"><button id="changeIP">Connect</button></p>
+</div>
 <div class="canvasWrapper">
     <canvas id="canvas"></canvas>
 </div>
